--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,9 +22,25 @@ services:
       - 5281:5281 # Secure BOSH / websocket port
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - certs:/certs/ # This is where the ssl certificates live
+      - certs:/certs/ # This is where the haproxy ssl certificates live
     environment:
       CERT_FOLDER: /certs/
+
+  # You only need to run this if your production environment id behind a domain name and you want a letsencrypt https certificate
+  # How to register a certificate :
+  # docker-compose exec certbot certbot certonly --webroot --agree-tos -m ${CERT_EMAIL} -d ${DOMAIN_NAME} -w /var/www/html/claroline/web
+  # TODO Concat cert into pem file
+  # Renewing a certificate should work automaticly
+  # TODO Concat cert into pem file
+  
+  certbot:
+    build: certbot/
+    volumes:
+      - data:/var/www/html/claroline
+      - certs:/certs/ # This is where the haproxy ssl certificates live
+    environment:
+      CERT_EMAIL: ${CERT_EMAIL}
+      DOMAIN_NAME: ${APP_URL}
 
   web:
     restart: always
@@ -85,5 +101,6 @@ networks:
 volumes:
   data:  # This is where the symfony files are stored
   mysql: # This is where the mysql data lives
-  certs: # This is where the ssl certificates live
+  certs: # This is where the haproxy ssl certificates live
   prosody: # The prosody data lives here
+  le: # This is where the letsencrypt ssl certificates live
