Added some env vars

--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,5 @@
 ### Let's encrypt
-CERT_EMAIL=cert@gmail.com
+CERT_EMAIL=cert@claroline.com
 
 ### URL
 APP_URL=claroline.loc
@@ -8,6 +8,7 @@ APP_URL=claroline.loc
 SECRET=change_me
 PLATFORM_NAME='My Claroline Connect Platform'
 PLATFORM_SUPPORT_EMAIL=noreply@claroline.com
+PLATFORM_SSL_ENABLED=true
 PLATFORM_LOCALE_LANGUAGE=fr
 PLATFORM_THEME=claroline
 PLATFORM_MAILER_TRANSPORT=smtp
@@ -21,10 +22,17 @@ PLATFORM_MAX_STORAGE_SIZE='1 TB'
 PLATFORM_MAX_UPLOAD_RESOURCES=10000
 PLATFORM_MAX_WORKSPACE_USERS=10000
 PLATFORM_IS_PDF_EXPORT_ACTIVE=true
-PLATFORM_CHAT_BOSH_PORT=5281
 PLATFORM_CHAT_ADMIN_USERNAME=randomadminusername
 PLATFORM_CHAT_ADMIN_PASSWORD=randomadminpassword
+PLATFORM_CHAT_BOSH_PORT=5281
 PLATFORM_CHAT_SSL=true
+
+### Initial Claroline admin user
+ADMIN_FIRSTNAME=John
+ADMIN_LASTNAME=Doe
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=admin
+ADMIN_EMAIL=noreply@claroline.com
 
 ### Database
 DB_NAME=claroline
@@ -33,5 +41,5 @@ DB_PASSWORD=claroline
 DB_ROOT_PASSWORD=root
 
 ### Chat
-PROSODY_LOCAL=admin
-PROSODY_PASSWORD=admin
+PROSODY_LOCAL=randomadminusername
+PROSODY_PASSWORD=randomadminpassword
