--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,8 +64,35 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       SECRET: ${SECRET}
+
       # These will be the default platform options
       PLATFORM_NAME: ${PLATFORM_NAME}
+      PLATFORM_SUPPORT_EMAIL: ${PLATFORM_SUPPORT_EMAIL}
+      PLATFORM_SSL_ENABLED: ${PLATFORM_SSL_ENABLED}
+      PLATFORM_LOCALE_LANGUAGE: ${PLATFORM_LOCALE_LANGUAGE}
+      PLATFORM_THEME: ${PLATFORM_THEME}
+      PLATFORM_MAILER_TRANSPORT: ${PLATFORM_MAILER_TRANSPORT}
+      PLATFORM_MAILER_HOST: ${PLATFORM_MAILER_HOST}
+      PLATFORM_MAILER_PORT: ${PLATFORM_MAILER_PORT}
+      PLATFORM_MAILER_ENCRYPTION: ${PLATFORM_MAILER_ENCRYPTION}
+      PLATFORM_MAILER_USERNAME: ${PLATFORM_MAILER_USERNAME}
+      PLATFORM_MAILER_PASSWORD: ${PLATFORM_MAILER_PASSWORD}
+      PLATFORM_MAILER_AUTH_MODE: ${PLATFORM_MAILER_AUTH_MODE}
+      PLATFORM_MAX_STORAGE_SIZE: ${PLATFORM_MAX_STORAGE_SIZE}
+      PLATFORM_MAX_UPLOAD_RESOURCES: ${PLATFORM_MAX_UPLOAD_RESOURCES}
+      PLATFORM_MAX_WORKSPACE_USERS: ${PLATFORM_MAX_WORKSPACE_USERS}
+      PLATFORM_IS_PDF_EXPORT_ACTIVE: ${PLATFORM_IS_PDF_EXPORT_ACTIVE}
+      PLATFORM_CHAT_BOSH_PORT: ${PLATFORM_CHAT_BOSH_PORT}
+      PLATFORM_CHAT_ADMIN_USERNAME: ${PLATFORM_CHAT_ADMIN_USERNAME}
+      PLATFORM_CHAT_ADMIN_PASSWORD: ${PLATFORM_CHAT_ADMIN_PASSWORD}
+      PLATFORM_CHAT_SSL: ${PLATFORM_CHAT_SSL}
+
+      # The first user to be created
+      ADMIN_FIRSTNAME: ${ADMIN_FIRSTNAME}
+      ADMIN_LASTNAME: ${ADMIN_LASTNAME}
+      ADMIN_USERNAME: ${ADMIN_USERNAME}
+      ADMIN_PASSWORD: ${ADMIN_PASSWORD}
+      ADMIN_EMAIL: ${ADMIN_EMAIL}
 
   db:
     restart: always
