--- a/.env.dist
+++ b/.env.dist
@@ -22,10 +22,11 @@ PLATFORM_MAX_STORAGE_SIZE='1 TB'
 PLATFORM_MAX_UPLOAD_RESOURCES=10000
 PLATFORM_MAX_WORKSPACE_USERS=10000
 PLATFORM_IS_PDF_EXPORT_ACTIVE=true
+PLATFORM_CHAT_BOSH_PORT=5280
 PLATFORM_CHAT_ADMIN_USERNAME=randomadminusername
 PLATFORM_CHAT_ADMIN_PASSWORD=randomadminpassword
-PLATFORM_CHAT_BOSH_PORT=5281
 PLATFORM_CHAT_SSL=true
+PLATFORM_CHAT_XMPP_MUC_HOST=conference.prosody
 
 ### Initial Claroline admin user
 ADMIN_FIRSTNAME=John
@@ -39,7 +40,3 @@ DB_NAME=claroline
 DB_USER=claroline
 DB_PASSWORD=claroline
 DB_ROOT_PASSWORD=root
-
-### Chat
-PROSODY_LOCAL=randomadminusername
-PROSODY_PASSWORD=randomadminpassword
