--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,8 @@ services:
     build: certbot/
     volumes:
       - data:/var/www/html/claroline
-      - certs:/certs/ # This is where the haproxy ssl certificates live
+      - le:/etc/letsencrypt/live/${APP_URL}
+      - certs:/certs/ # This is where the ssl certificates live
     environment:
       CERT_EMAIL: ${CERT_EMAIL}
       DOMAIN_NAME: ${APP_URL}
@@ -49,8 +50,8 @@ services:
     networks:
       - lb
       - db
-    extra_hosts:
-      - "${APP_URL}:172.16.238.10" # This is needed so that web can talk to the lb, it allso meens we dont need to mess around with ssl certificates for the prosody server
+    #extra_hosts:
+    #  - "${APP_URL}:172.16.238.10" # This is needed so that web can talk to the lb, it allso meens we dont need to mess around with ssl certificates for the prosody server
     volumes:
       - data:/var/www/html/claroline # This is where the symfony files are stored
       - certs:/certs/ # This is where the ssl certificates live # This probably should not live in the web container
@@ -116,6 +117,7 @@ services:
     volumes:
       - prosody:/var/lib/prosody # The prosody data lives here
       #- certs:/etc/prosody/ssl/ # This is where the haproxy ssl certificates live
+      - le:/certs/
     environment:
       TCP_PORTS: "5222/ssl, 5269/ssl, 5347/ssl, 5280/ssl, 5281/ssl" #TODO : try eliminating some of these ports
       LOCAL: ${PLATFORM_CHAT_ADMIN_USERNAME}
@@ -126,14 +128,14 @@ services:
 
 networks:
   lb: # The frontend network
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-      - subnet: 172.16.238.0/24
-        gateway: 172.16.238.1
-      - subnet: 2001:3984:3989::/64
-        gateway: 2001:3984:3989::1
+    #driver: bridge
+    #ipam:
+    #  driver: default
+    #  config:
+    #  - subnet: 172.16.238.0/24
+    #    gateway: 172.16.238.1
+    #  - subnet: 2001:3984:3989::/64
+    #    gateway: 2001:3984:3989::1
 
   db: # The database network
 
