--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,14 +48,14 @@ services:
     networks:
       - front
       - db
-    #extra_hosts:
-    #  - "${APP_URL}:172.16.238.10" # This is needed so that web can talk to the lb, it allso meens we dont need to mess around with ssl certificates for the prosody server
+    extra_hosts:
+      - "${APP_URL}:172.16.238.10" # This is needed so that web can talk to the lb in the case of a local installation.
     volumes:
       - data:/var/www/html/claroline # This is where the symfony files are stored
       - certs:/certs/ # This is where the ssl certificates live # This probably should not live in the web container
     environment:
       VIRTUAL_HOST: https://${APP_URL}, http://${APP_URL} # Both http and https are needed for http->https redirection to work
-      #FORCE_SSL: "yes" # Force redirech http to https
+      FORCE_SSL: "yes" # Force redirech http to https
 
       APP_URL: ${APP_URL}
       DB_HOST: db
@@ -123,15 +123,15 @@ services:
       - front
 
 networks:
-  lb: # The frontend network
-    #driver: bridge
-    #ipam:
-    #  driver: default
-    #  config:
-    #  - subnet: 172.16.238.0/24
-    #    gateway: 172.16.238.1
-    #  - subnet: 2001:3984:3989::/64
-    #    gateway: 2001:3984:3989::1
+  front: # The frontend network
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+      - subnet: 172.16.238.0/24
+        gateway: 172.16.238.1
+      - subnet: 2001:3984:3989::/64
+        gateway: 2001:3984:3989::1
 
   db: # The database network
 
