--- a/certbot/Dockerfile
+++ b/certbot/Dockerfile
@@ -6,4 +6,7 @@ RUN apt-get update \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y \
     python-certbot-apache
 
+COPY obtain.sh:/
+COPY renew.sh:/
+
 CMD ["tail", "-f", "dev/null"]
